--- a/emp-app/src/app/emp-dashboard/emplist/emplist.component.html
+++ b/emp-app/src/app/emp-dashboard/emplist/emplist.component.html
@@ -1,3 +1,8 @@
+<div>
+    <a class="nav-link" routerLink="./registerformgroup">Reg</a>
+  </div>
+  <router-outlet></router-outlet>
+
 <table border="1">
     <tr>
         <th>Id</th>
